Fix layout of editor panel after scrolling tree node into view (previously caused layout to jump)

--- a/mesop/web/src/dev_tools/dev_tools.scss
+++ b/mesop/web/src/dev_tools/dev_tools.scss
@@ -9,10 +9,11 @@
   border-left: 1px solid #dcdcdc;
   display: flex;
   font-size: 0.9rem;
-  position: sticky;
+  position: fixed;
   line-height: 1.5;
   align-items: center;
   font-weight: 500;
+  background: #fff;
 }
 
 .inspect-button {
