--- a/mesop/web/src/dev_tools/editor_panel/editor_panel.scss
+++ b/mesop/web/src/dev_tools/editor_panel/editor_panel.scss
@@ -29,7 +29,7 @@
 }
 
 .top-panel {
-  margin-top: 8px;
+  margin-top: 40px;
   margin-bottom: 16px;
   overflow: auto;
   margin-bottom: var(--default-bottom-panel-height);
